# church-automation

./: .dockerignore  .gitignore  A_Story_About_Compassion.txt  All Praise.proBundle  Centering Words.proBundle  DEPLOYMENT-VERIFICATION.md  Dockerfile  FirstUP.proplaylist  GEMINI.md  Greeting Each Other.txt  INSTALL.md  Makefile  PHASE2-COMPLETION.md  PHASE2-README.md  PROBUNDLE_GUIDE.md  PROPRESENTER_AUTOMATION_PLAN.md  README-DEPLOYMENT.md  README.md  Scripture Reading.proBundle  TODO.md  Welcome.txt  benediction.txt  check_archive_format.py  check_lyrics.py  compare_zip_format.py  decode_pro_file.py  decoded_generated.txt  decoded_prayer.txt  decoded_white_template.txt  deep_compare_zip.py  diagnose-web-ui.sh  docker-compose.yml  docker-compose_dep.yml  gmail_utils.py  prayer.html  pyproject.toml  rebuild-docker.sh  requirements.txt  run_all.py  scripture.txt  (+11 more)
.github/: copilot-instructions.md
announcements/: README_PROBUNDLE.md  announcement.txt  gmail_utils.py  html_parser.py  main.py  main_probundle.py  ppt_generator.py  summarize.py  test_probundle.py  weekly_announcements_07-27.pro
deprecated/: make_pro.py  make_service_slides.py  planning_center_api.py  pro_generator.py
docs/: camera-any-song-mappings.md
examples/: .env.example  generate_probundle_example.py  slides_config.example.json
plans/: add-slides-service-selection-complete.md  add-slides-service-selection-phase-1-complete.md  add-slides-service-selection-phase-2-complete.md  add-slides-service-selection-phase-3-complete.md  add-slides-service-selection-phase-4-complete.md  add-slides-service-selection-phase-5-complete.md  add-slides-service-selection-plan.md  fix-slides-generation-issues-complete.md  fix-slides-generation-issues-phase-1-complete.md  fix-slides-generation-issues-phase-2-complete.md  fix-slides-generation-issues-phase-3-complete.md  fix-slides-generation-issues-phase-4-complete.md  fix-slides-generation-issues-phase-5-complete.md  fix-slides-generation-issues-phase-6-complete.md  fix-slides-generation-issues-plan.md  phase-5-implementation-summary.md  phase-5-quick-reference.md  (+1 more)
(+115 files in other folders)
