[project]
name = "church-automation-suite"
version = "0.1.0"
description = "Monorepo for church automation tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "church-automation-shared",
    "church-automation-announcements",
    "church-automation-bulletins",
    "church-automation-slides",
    "python-pptx>=0.6.0",
    "py7zr>=0.20.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
church-automation-shared = { workspace = true }
church-automation-announcements = { workspace = true }
church-automation-bulletins = { workspace = true }
church-automation-slides = { workspace = true }
